[package]
name = "lodestone"
version = "0.1.0"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "A website wrapper for FFXIV's lodestone."
documentation = "https://docs.rs/lodestone"
repository = "https://github.com/Roughsketch/lodestone"
readme = "README.md"
keywords = ["lodestone", "ffxiv"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
# bitflags = "1.0.3"
failure = "0.1.1"
lazy_static = "1.0"
reqwest = "0.8.6"
select = "0.4.2"