[package]
edition = "2018"
name = "lodestone"
version = "0.4.0"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "A website wrapper for FFXIV's lodestone."
documentation = "https://docs.rs/lodestone"
repository = "https://github.com/Roughsketch/lodestone"
readme = "README.md"
keywords = ["lodestone", "ffxiv"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
failure = "0.1.5"
lazy_static = "1.3"
reqwest = "0.9"
select = "0.4"