[package]
edition = "2021"
name = "lodestone"
version = "0.4.0"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "A website wrapper for FFXIV's lodestone."
documentation = "https://docs.rs/lodestone"
repository = "https://github.com/Roughsketch/lodestone"
readme = "README.md"
keywords = ["lodestone", "ffxiv"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
failure = "0.1.8"
lazy_static = "1.4.0"
reqwest = {version = "0.10.7", features = ["blocking"]}
select = "0.5.0"